// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render 1`] = `
<div>
  <tr
    class=""
  />
</div>
`;

exports[`Row should render with data 1`] = `
<div>
  <tr
    class=""
  >
    <td>
      <div
        class="table-title text-truncate"
      >
        Foo Bar
      </div>
    </td>
    <td>
      50,000
    </td>
  </tr>
</div>
`;
